--- a/Portfolio.css
+++ b/Portfolio.css
@@ -161,8 +161,8 @@ ul {
 	padding-bottom: 20px;
 }
 .gif {
-	max-width: 90%;
-	max-height:90%;
+	max-width: 315px;
+	max-height:236px;
 	text-align: left;
 }
 .No {
