--- a/Portfolio.css
+++ b/Portfolio.css
@@ -93,7 +93,7 @@ ul {
   text-align: center;
   background-image: url('PFol.PNG');
   background-size: 100%;
-height: 100%;
+height: 969px;
 }
 .bxb{
   background-color: #2471A3;
@@ -105,7 +105,7 @@ height: 100%;
   text-align: center;
   background-image: url('Ping.png');
   background-size: 100%;
-	height: 100%;
+	height: 969px;
 }
 .bobr{
   background-color: #2471A3;
@@ -116,7 +116,7 @@ height: 100%;
   text-align: center;
   background-image: url('Yo.PNG');
   background-size: 100%;
-	height: 100%;
+	height: 969px;
 
 }
 .oxr{
@@ -129,27 +129,27 @@ height: 100%;
   text-align: center;
   background-image: url('Ballz.PNG');
   background-size: 100%;
-	height: 100%;
+	height: 969px;
 }
 .bxb:hover{
 	background-image: url('PingT.png');
 	background-size: 100%;
-	height: 100%;
+	height: 969px;
 }
 .box:hover{
 	background-image: url('PFolT.png');
 	background-size: 100%;
-	height: 100%;
+	height: 969px;
 }
 .bobr:hover{
 	background-image: url('YoT.png');
 	background-size: 100%;
-	height: 100%;
+	height: 969px;
 }
 .oxr:hover{
 	background-image: url('BallzT.png');
 	background-size: 100%;
-	height: 100%;
+	height: 969px;
 }
 .fot {
 	color: #2A2A2A;
