--- a/Portfolio.css
+++ b/Portfolio.css
@@ -84,6 +84,7 @@ ul {
   grid-template-columns: auto auto;
   background-color: white;
   padding: 15px;
+	height:500px;
 }
 .box{
   background-color: #2471A3;
